Revision history for {{$dist->name}}

{{$NEXT}}

0.68      2013-08-23 08:38:40 -0400
  - documentation tweaks

0.67      2013-03-21 11:01:47 America/New_York
  - fix META.json,yml

0.66      2013-03-07 08:39:25 America/New_York
  - added on_success callback

0.65      2013-02-09 17:10:56 America/New_York
  - documentation updates

0.64      2013-02-05 08:54:37 America/New_York
  - added timeout to proc.t

0.63      2013-02-04 08:27:08 America/New_York
  - adjust timout detection and failure in test to be more aggressive

0.62      2012-12-29 09:31:07 America/New_York
  - unstuck tests on MSWin32.  Platform is still unsupported as per the docs.

0.61      2012-11-29 12:19:35 America/New_York
  - Documentation clarification
  - Don't include core prereqs

0.6       2012-10-04 04:48:11 EST5EDT
  - Use Core::close instead of IO::Handle->close
  - Use Core::print instead of IO::Handle->print

0.5       2012-10-02 15:53:35 America/New_York
  - Fix glaring error in the documentation SYNOPSIS

0.4       2012-10-02 15:26:59 America/New_York
  - Fix typeo which broke when passing in hashref to constructor (GH#1)

0.3       2012-10-02 13:42:28 America/New_York
  - documentation fixes
  - re-enable on_error.t for newer perl

0.2       2012-10-02 09:16:57 EST5EDT
  - disabled unreliable test

0.1       2012-10-02 01:20:45 EST5EDT
  - initial version