@@ -1,6 +1,10 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - change end line processing
+    in the past we used chomp() which removed trailing $/
+    but this didn't work nicely with MSWin32, instead we
+    use a regex that removes \r\n, \n or \r
 
 0.68      2013-08-23 08:38:40 -0400
   - documentation tweaks
